fix contrast of pink and orange colors

--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -45,10 +45,10 @@
     --color-dark-yellow:#5e5000;
     --color-dark-yellow:94, 80, 0;
 
-    --color-dark-pink:#b3004d;
-    --color-dark-pink:179, 0, 77;
+    --color-dark-pink:#6b002e;
+    --color-dark-pink:107, 0, 46;
 
-    --color-dark-orange:#a71900;
-    --color-dark-orange:167, 25, 0;
+    --color-dark-orange:#751200;
+    --color-dark-orange:117, 18, 0;
 
 }
